--- a/certs/openssl-test-server.cnf
+++ b/certs/openssl-test-server.cnf
@@ -18,6 +18,7 @@ subjectAltName = @alt_names
 
 [ alt_names ]
 DNS.1 = localhost   ##TODO: Enter the DNS names. The DNS names should match the server names.
+DNS.2 = *.apps.eu46.prod.nextcle.com   ##TODO: Enter the DNS names. The DNS names should match the server names.
 IP.1 = 127.0.0.1         ##TODO: Enter the IP address. SAN matching by IP address is available starting in MongoDB 4.2
 
 [ req_dn ]
